[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chuk-mcp-linkedin"
version = "0.1.0"
description = "Design system MCP server for creating LinkedIn posts with shadcn-inspired components, variants, and themes"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Christopher Hay", email = "chris@chrishay.com" }
]
keywords = [
    "mcp",
    "linkedin",
    "design-system",
    "content-creation",
    "social-media",
    "automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0", # Session management with Redis backend
    "python-dotenv>=1.0.0",
    "chuk-artifacts>=0.4.1",
    "chuk-sessions[redis]>=0.4.2",
    "chuk-mcp-server>=0.6",
]

[project.scripts]
linkedin-mcp = "chuk_mcp_linkedin.cli:main"
linkedin-mcp-server = "chuk_mcp_linkedin.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
# HTTP server dependencies
http = [
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
]
# Document preview dependencies
# Install with: pip install chuk-mcp-linkedin[preview]
preview = [
    "pdf2image>=1.16.3",  # PDF to image conversion (requires poppler)
    "Pillow>=10.0.0",      # Image manipulation
    "python-pptx>=0.6.21", # PowerPoint support
    "python-docx>=1.0.0",  # Word document support
    "PyPDF2>=3.0.0",       # PDF page counting
]

[project.urls]
Homepage = "https://github.com/chrishayuk/chuk-mcp-linkedin"
Repository = "https://github.com/chrishayuk/chuk-mcp-linkedin"
Issues = "https://github.com/chrishayuk/chuk-mcp-linkedin/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chuk_mcp_linkedin"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/chuk_mcp_linkedin --cov-report=term-missing"
# Configure async tests to use asyncio
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "src/chuk_mcp_linkedin/server.py",         # MCP server - requires special testing infrastructure
    "src/chuk_mcp_linkedin/async_server.py",   # Async MCP server - requires special testing infrastructure
    "src/chuk_mcp_linkedin/cli.py",            # CLI entry point - requires integration tests
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.5",
]

[tool.uv]
# Override dependencies - uvloop doesn't support Windows
override-dependencies = [
    "uvloop>=0.20.0; sys_platform != 'win32'",
]
